# basis

./: .gitignore  CMakeLists.txt  Config.cmake.in  Doxyfile  INSTALL.md  README.md  basis.h  degenerate.h  degenerate_test.cpp  hypersector.h  hypersector_test.cpp  indexing.h  jjjpn_operator.cpp  jjjpn_operator.h  jjjpn_operator_test.cpp  jjjpn_scheme.cpp  jjjpn_scheme.h  jjjpn_scheme_general.cpp  jjjpn_scheme_general.h  jjjpn_scheme_general_test.cpp  jjjpn_scheme_test.cpp  jjjpnorb_operator.cpp  jjjpnorb_operator.h  jjjpnorb_operator_test.cpp  jjjpnorb_scheme.cpp  jjjpnorb_scheme.h  jjjpnorb_scheme_test.cpp  jjjt_operator.cpp  jjjt_operator.h  jjjt_scheme.cpp  jjjt_scheme.h  jjjt_scheme_test.cpp  jjjttz_operator.cpp  jjjttz_operator.h  jjjttz_operator_test.cpp  jjjttz_scheme.cpp  jjjttz_scheme.h  jjjttz_scheme_test.cpp  jt_operator.h  ljpn_orbital.h  (+36 more)
basis/: basis.h  degenerate.h  hypersector.h  jjjpn_operator.cpp  jjjpn_operator.h  jjjpn_scheme.cpp  jjjpn_scheme.h  jjjt_scheme.cpp  jjjt_scheme.h  jjjttz_operator.cpp  jjjttz_operator.h  jjjttz_scheme.cpp  jjjttz_scheme.h  jt_operator.h  lsjt_operator.h  many_body.h  map.h  nlj_operator.h  nlj_orbital.h  operator.h  oscillator_orbital.cpp  oscillator_orbital.h  product.h  proton_neutron.cpp  proton_neutron.h  sector.h  space.h  state.h  subspace.h  type_traits.h
test/: degenerate_test.cpp  hypersector_test.cpp  jjjpn_operator_test.cpp  jjjpn_scheme_general_test.out  jjjpn_scheme_reconciliation_Nmax02.txt  jjjpn_scheme_test.cpp  jjjt_scheme_test.cpp  jjjt_scheme_test.out  jjjttz_operator_test.cpp  jjjttz_scheme_test.cpp  lsjt_operator_test.cpp  lsjt_operator_test.out  lsjt_scheme_test.cpp  lsjt_scheme_test.out  m_scheme_test.cpp  nlj_orbital_test.cpp  nlj_orbital_test.out  oscillator_orbital_test.cpp  product_test.cpp
